--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "android": "cap sync android && cap open android"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.11.0",
-    "recharts": "^3.6.0",
-    "react-leaflet": "^5.0.0"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.0",
