--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "android": "cap sync android && cap open android"
   },
   "dependencies": {
+    "@capacitor/geolocation": "^8.0.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -18,6 +19,8 @@
     "recharts": "^3.6.0"
   },
   "devDependencies": {
+    "@capacitor/android": "^8.0.0",
+    "@capacitor/cli": "^8.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "vite": "^6.2.0"
   }
